--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,16 @@
+:root{
+  --bg: #303030;
+  --text: #ffffff;
+}
+
 *{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+body{
+  background-color: var(--bg) !important;
+  font-family: Arial, Helvetica, sans-serif;
+  color: var(--text);
 }
