--- a/src/App.css
+++ b/src/App.css
@@ -6,10 +6,11 @@
     width: 100%;
     height: 80vh;
     margin-top: 10px;
+    flex-wrap: wrap;
 }
 
 .main-img{
-    width: 30vw;
+    width: 50vw;
     height: auto;
 }
 
@@ -34,7 +35,7 @@
 }
 
 .btn-wrap-content p{
-    color: #ffffff;
+    color: #000;
 }
 
 .btn-show-description{
@@ -52,12 +53,50 @@
     transform: scale(1.05);
 }
 
-@media (max-width: 400px) {
+.description-container{
+    display: flex;
+    justify-content: center;
+    background-color: #fff;
+    align-items: center;
+    flex-direction: column;
+    width: 15rem;
+    padding: 25px;
+    border: solid #fff 2px;
+    
+}
+
+.description-text{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #000 !important;
+}
+
+
+.close-button button{
+    width: 200px;
+    height: 40px;
+    color: #5a5a5a;
+    border-radius: 15px;
+    margin-bottom: 32px;
+    transition: 450ms ease-in-out;
+}
+
+.close-button button:hover{
+    transform: scale(1.05);
+    background-color: red;
+    color: #fff;
+}
+
+@media (max-width: 800px) {
     .main-img{
         width: 100vw;
         height: auto;
+        margin-top: -1.5%;
     }
     .s1{
-        flex-direction: column;
+        flex-direction: row ;
     }
 }
