--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
     align-items: center;
     gap: 50px;
     width: 100%;
-    height: 80vh;
+    min-height: 80vh;
     margin-top: 10px;
     flex-wrap: wrap;
 }
@@ -88,6 +88,50 @@
     transform: scale(1.05);
     background-color: red;
     color: #fff;
+}
+
+.s2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 100vw;
+    width: 100%;
+    background-color: black;
+    opacity: 0;
+    transform: translateY(50px);
+    pointer-events: none;
+    transition: opacity 400ms ease, transform 400ms ease;
+    min-height: 40vh; 
+}
+
+.s2.mostrar {
+    opacity: 1;
+    transform: translateY(0px);
+    pointer-events: all;
+}
+
+.s2.esconder {
+    opacity: 0;
+    transform: translateY(50px);
+    pointer-events: none;
+}
+
+.video-conteiner{
+    width: 100vw;
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.video_embed{
+    display: flex;
+    justify-content: center;
+    width: 98vw;
+    height: auto;
 }
 
 @media (max-width: 800px) {
